--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "backend"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Łukasz Bacik <mail@luka.sh>"]
 readme = "README.md"
@@ -10,6 +10,8 @@ python = "^3.11"
 uvicorn = "^0.20.0"
 fastapi = "^0.93.0"
 pydantic = "^1.10.5"
+python-dotenv = "^1.0.0"
+redis = "^4.5.1"
 
 
 [build-system]
